<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@android:color/white"
    >


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:paddingLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/man"
            android:layout_marginTop="20dp"
            />

        <TextView
            style="@style/AboutAppTextViewStyle"
            android:text="@string/developer"/>

        <TextView
            style="@style/AboutAppTextViewStyle"
            android:text="@string/company"/>
        <TextView
            style="@style/AboutAppTextViewStyle"
            android:text="@string/email"/>


    </LinearLayout>

    <TextView
        android:id="@+id/tv_appversion"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/version"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
