<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">



    <EditText
        android:id="@+id/et_feedbackInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/feedback_hint"
        android:gravity="left"
        android:padding="5dp"
        android:background="@drawable/feedback_edittext_shape"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/et_contact_infomation"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/feedback_edittext_shape"
            android:hint="@string/Contact_information"
            android:textSize="15sp"
            android:paddingLeft="5dp"
            android:layout_marginTop="10dp"
            android:singleLine="true"/>
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/submit"
            android:enabled="false" />
    </LinearLayout>
</LinearLayout>