<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.zzptc.liuxiaolong.news.activity.Activity_Setting">
            <android.support.v7.widget.Toolbar
                android:id="@+id/setting_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@mipmap/back"
                app:titleTextColor="@android:color/white"
                app:titleTextAppearance="@style/TitleSize"
                android:background="@android:color/holo_blue_light"
                app:title="@string/setting"
                >
            </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_collapseMode="parallax"
        android:background="@android:color/holo_blue_light"
        >


        <ImageView
            android:id="@+id/iv_userhead"
            android:layout_width="110dp"
            android:scaleType="fitXY"
            android:layout_height="110dp"
            android:src="@mipmap/man"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
        <TextView
            android:id="@+id/tv_userName"
            android:layout_below="@id/iv_userhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="刘小龙"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="3">

        <LinearLayout
            android:id="@+id/user_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@mipmap/ic_settings_black_48dp"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                />
            <TextView
                style="@style/settingBtnItemStyle"
                android:text="@string/user_setting"
                />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/Feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@mipmap/ic_feedback_black_48dp"
                android:layout_gravity="center"
                />
            <TextView
                style="@style/settingBtnItemStyle"
                android:text="@string/feedback"
                />
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/clear_cache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp">

            <ImageView
                android:id="@+id/clear_cache_img"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@mipmap/ic_clear_all_black_48dp"
                android:layout_centerVertical="true"
                />
            <TextView
                android:id="@+id/clear_cache_btn"
                style="@style/settingBtnItemStyle"
                android:layout_toRightOf="@id/clear_cache_img"
                android:text="@string/clear_cache"
                android:layout_width="wrap_content"
                />

            <TextView
                android:id="@+id/clear_cache_size"
                android:layout_alignParentRight="true"
                android:paddingRight="10dp"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/about_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp">

            <TextView
                style="@style/settingBtnItemStyle"
                android:text="@string/about_app"
                android:layout_width="342dp"
                android:id="@+id/textView" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
